Sutter Health/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Member_Name_Suffix__c</fullName>
        <label>Member Name Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Native_Language__c</fullName>
        <label>Member Native Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_NPI__c</fullName>
        <label>Member PCP NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Name_First__c</fullName>
        <label>Member PCP First Name</label>
        <length>107</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Name_Full__c</fullName>
        <label>Member PCP Full Name</label>
        <length>107</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Name_Last__c</fullName>
        <label>Member PCP Last Name</label>
        <length>107</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Name_Middle__c</fullName>
        <label>Member PCP Middle Name</label>
        <length>107</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Name__c</fullName>
        <label>Member PCP Name</label>
        <length>107</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Practitioner_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member PCP Practitioner HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Practitioner_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member PCP Practitioner HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Specialty_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member PCP Specialty HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Specialty_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member PCP Specialty HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Specialty_Name__c</fullName>
        <label>Member PCP Specialty Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Specialty_Sub_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member PCP Specialty-Sub HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Specialty_Sub_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member PCP Specialty-Sub HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Specialty_Sub_IsPrimaryFlag__c</fullName>
        <label>Member PCP Specialty-Sub Is Primary</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Specialty_Sub_Name__c</fullName>
        <label>Member PCP Specialty-Sub Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_SubSpecialty_IsPrimaryFlag__c</fullName>
        <label>Member PCP SubSpecialty Is Primary</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_SubSpecialty_Name__c</fullName>
        <label>Member PCP SubSpecialty Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Supplier_Location_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member PCP Supplier Location HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Supplier_Location_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member PCP Supplier Location HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_PCP_Supplier_Location_Name__c</fullName>
        <label>Member PCP Supplier Location Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Plan_Effective_Date__c</fullName>
        <label>Plan Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Plan_Name__c</fullName>
        <label>Member Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Plan_Termination_Date__c</fullName>
        <label>Member Plan Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Primary_Language__c</fullName>
        <label>Member Primary Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address1__c</fullName>
        <label>Residential Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address2__c</fullName>
        <label>Member Resi Address2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address3__c</fullName>
        <label>Member Resi Address3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address_City__c</fullName>
        <label>Member Resi Address City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address_Country__c</fullName>
        <label>Member Resi Address Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address_County__c</fullName>
        <label>Residential County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address_State__c</fullName>
        <label>Member Resi Address State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Resi_Address_Zip__c</fullName>
        <label>Member_Resi_Address_Zip</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Subscriber_HCC_ID__c</fullName>
        <description>Primary key and best static identifier from HealthRules</description>
        <label>Member Subscriber HCC ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Subscriber_HR_ID__c</fullName>
        <description>Secondary key from HealthRules, used to ensure differentiation from the HCC ID</description>
        <label>Member Subscriber HR ID</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Subscriber_Relationship__c</fullName>
        <label>Member Subscriber Relationship</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Termination_Date__c</fullName>
        <label>Member Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_VIP_Reason__c</fullName>
        <label>Member VIP Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Work_Extn__c</fullName>
        <label>Member Work Extn</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Work_Phone__c</fullName>
        <label>Member Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_s_PCP_Name_Practice__c</fullName>
        <label>Member&apos;s PCP Name/Practice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <label>NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Not_Reachable_Closed_Cases__c</fullName>
        <description>No of Not Reachable Closed Cases</description>
        <label>No of Not Reachable Closed Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ok_To_Text__c</fullName>
        <description>PDV</description>
        <label>Ok To Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_County__c</fullName>
        <label>Other County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Out_of_Area_Service__c</fullName>
        <label>Out of Area Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Effective_Date__c</fullName>
        <label>PCP Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PCP_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCP Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCP_Medical_Practice__c</fullName>
        <label>PCP Medical Practice</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_NPI__c</fullName>
        <label>PCP NPI</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_NPI__c</fullName>
        <label>PCP Practitioner NPI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCP_Practitioner_Name__c</fullName>
        <label>PCP Practitioner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHI_Legal_Representative__c</fullName>
        <label>PHI Legal Representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PHI_Restrictions__c</fullName>
        <label>PHI Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Effective_Date__c</fullName>
        <label>Plan Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Termination_Date__c</fullName>
        <label>Plan Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Practitioner_ID__c</fullName>
        <label>Practitioner ID</label>
        <length>15</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Preferred_Communication_Method__c</fullName>
        <label>Communication Preferences – EHR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pregnancy_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pregnancy Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commission Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Telephone_Number__c</fullName>
        <label>Primary Telephone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Accepted_Patient_Age_Range_Max__c</fullName>
        <label>Provider Accepted Patient Age Range Max</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Accepted_Patient_Age_Range_Min__c</fullName>
        <label>Provider Accepted Patient Age Range Min</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Accepted_Patient_Age_Range__c</fullName>
        <label>Provider Accepted Patient Age Range</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Accepting_New_Patients__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Accepting New Patients</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Access_Type__c</fullName>
        <description>EPIC Access Type field. The value in this field will be used to control the pick list values of communication preference fields</description>
        <label>Access Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Active_Status_Date__c</fullName>
        <label>Provider Active Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Active_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Active Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Address_Line_2__c</fullName>
        <label>Provider Address Line_2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Admin_Assistant_Email__c</fullName>
        <description>Used to capture admin assistant email</description>
        <label>Delegate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Admin_Assistant_Phone__c</fullName>
        <label>Delegate Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Admin_Assistant_Title__c</fullName>
        <description>Used to capture provider assistant title.</description>
        <label>Delegate Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Admin_Assistant__c</fullName>
        <description>Used to capture admin assistant name</description>
        <label>Delegate Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Alt_Correspondence_Address__c</fullName>
        <label>Provider Alt. Correspondence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Alt_Correspondence_City__c</fullName>
        <label>Provider Alt. Correspondence City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Alt_Correspondence_Fax__c</fullName>
        <description>S3 Provider (Practioner) Field</description>
        <label>Provider Alt Correspondence Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Alt_Correspondence_Phone__c</fullName>
        <label>Provider Alt Correspondence Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Alt_Correspondence_PostalCode__c</fullName>
        <label>Provider Alt. Correspondence Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Alt_Correspondence_State__c</fullName>
        <label>Provider Alt. Correspondence State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Benefit_Network__c</fullName>
        <label>Provider Benefit Network</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Communication_Preferences_HIM__c</fullName>
        <label>Communication Preferences – HIM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Basket Message</fullName>
                </value>
                <value>
                    <fullName>In Basket Letter</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Printed Letter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_Address__c</fullName>
        <label>Provider Correspondence Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_City__c</fullName>
        <label>Provider Correspondence City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_County__c</fullName>
        <label>Provider Correspondence County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_Fax_Number__c</fullName>
        <label>Provider Correspondence Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_PostalCode__c</fullName>
        <label>Provider Correspondence PostalCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Correspondence_State__c</fullName>
        <label>Provider Correspondence State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Credential_Status__c</fullName>
        <label>Credential Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Delegate_Phone_Ext__c</fullName>
        <description>Used to capture delegate phone extension.</description>
        <label>Delegate Phone Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Direct_Address__c</fullName>
        <label>Direct Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_ID__c</fullName>
        <label>Provider ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_InNetwork_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider In-network Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Inactive_Status_Date__c</fullName>
        <label>Provider Inactive Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Languages_Spoken__c</fullName>
        <label>Provider Languages Spoken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_License_Number__c</fullName>
        <label>Provider License Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_License_State__c</fullName>
        <label>License State</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Max_Panel_Membership__c</fullName>
        <label>Provider Max Panel Membership</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_NPI__c</fullName>
        <label>Provider NPI</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name_Suffix__c</fullName>
        <label>Provider Name Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <label>Provider Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Operation_Hours__c</fullName>
        <label>Provider Operation Hours</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Org_Structure__c</fullName>
        <label>Provider Org Structure</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_PCP_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider PCP Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Portal_Last_Validation_Date__c</fullName>
        <label>Provider Portal Last Validation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Provider_Practicing_Physician__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Practicing Physician</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Resigned_From_Sutter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resigned From Sutter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_Retired_Departed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retired/Departed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provider_SHIS_Enterprise_ID__c</fullName>
        <label>Provider SHIS Enterprise ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Secondary_Email__c</fullName>
        <label>Provider Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Provider_Service_Status__c</fullName>
        <label>Provider Service Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retired</fullName>
                </value>
                <value>
                    <fullName>Resigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Specialty_1__c</fullName>
        <label>Provider Specialty 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Specialty_2__c</fullName>
        <label>Provider Specialty 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Specialty_3__c</fullName>
        <label>Provider Specialty 3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Specialty_Subspecialty__c</fullName>
        <label>Provider Specialty/Subspecialty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Specialty__c</fullName>
        <label>Specialty</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Provider_Sub_Specialty__c</fullName>
        <label>Provider Sub Specialty</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Title__c</fullName>
        <label>Provider Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_UPIN__c</fullName>
        <label>Provider UPIN</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient_for_mail_communication__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recipient for mail communication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Religious_Exemption_Applied__c</fullName>
        <formula>IF( CONTAINS(RecordType.Name, &apos;Member&apos;) , Account.Religious_Exemption_Applied__c, Null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Birth control coverage not provided due to religious exemption</inlineHelpText>
        <label>Religious Exemption Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Address__c</fullName>
        <description>This formula filed is being used in OLTP member
Req no 3236</description>
        <formula>Member_Resi_Address1__c &amp; &quot; &quot; &amp; Member_Resi_Address2__c &amp; &quot; &quot; &amp; Member_Resi_Address3__c &amp; &quot; &quot; &amp; Member_Resi_Address_City__c &amp; &quot; &quot; &amp;  Member_Resi_Address_State__c &amp; &quot; &quot; &amp; Member_Resi_Address_Zip__c &amp;&quot; &quot; &amp;  Member_Resi_Address_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Residential Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Auto_Number__c</fullName>
        <displayFormat>C-{00000000}</displayFormat>
        <label>SFDC Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SFDC_Contact_ID__c</fullName>
        <formula>CASE( RecordType.Name ,
&quot;SHP Sales Broker Contact&quot;,&quot;BR&quot;,
&quot;SHP Sales Broker Contact Read Only&quot;,&quot;BR&quot;,
&quot;SHP Sales Employer Contact&quot;,&quot;ER&quot;,
&quot;SHP Sales Employer Contact Read Only&quot;,&quot;ER&quot;, &quot;&quot;) &amp;   SFDC_Auto_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SFDC Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Active_Tin__c</fullName>
        <label>Active Tin</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Benefit_Network__c</fullName>
        <description>Req no 3356 OLTP provider</description>
        <label>Benefit Network</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Broker_ID__c</fullName>
        <label>SHP Broker ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Inactive_Tin__c</fullName>
        <label>Inactive Tin</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Mailing_Address__c</fullName>
        <description>this field is using for OLTP provider</description>
        <formula>MailingStreet + &apos; &apos; + MailingCity + &apos; &apos; + MailingState + &apos; &apos; + MailingPostalCode+ &apos; &apos; + MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Accepting_New_Patients__c</fullName>
        <defaultValue>&apos;N/A&apos;</defaultValue>
        <description>This field is created to capture the Practitioner accepting new Patient as a part of OLTP Req-3356.</description>
        <label>Practitioner Accepting New Patients?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Corres_Secure_Zip__c</fullName>
        <description>This field is created to capture the Practitioner Correspondence Secure Zip as a part of OLTP Req-3356.</description>
        <label>Practitioner Secure Corres. Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Language__c</fullName>
        <description>This field is created to capture the Practitioner Language as a part of OLTP Req-3356.</description>
        <label>Practitioner Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Medical_Grp_Affiliation__c</fullName>
        <description>This field is created to capture the Practitionar Medical Group Affiliation as a part of OLTP Req-3356.</description>
        <label>Practitioner Medical Group Affiliation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_PCP_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created to capture the Practitioner PCP Flag as a part of OLTP Req-3356.</description>
        <label>Practitioner PCP Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Secure_Corres_City__c</fullName>
        <description>This field is created to capture the Practitioner Secure Correspondence City as a part of OLTP Req.3356</description>
        <label>Practitioner Secure Corres. City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Secure_Corres_Email__c</fullName>
        <description>This field is created to capture the Practitioner Secure Correspondence Email as a part of OLTP Req-3356.</description>
        <label>Secure Corres. Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Secure_Corres_Fax__c</fullName>
        <description>This field is created for OLTP Provider requirement 3356</description>
        <label>Secure Corres. Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Secure_Corres_Mobile__c</fullName>
        <description>This field is created to capture the Practitioner secure Correspondence Mobile  as a part of OLTP Req-3356.</description>
        <label>Secure Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Secure_Corres_State__c</fullName>
        <description>This field is created to capture the Practitioner Secure Correspondence State  as a part of OLTP Req-3356.</description>
        <label>Practitioner Secure Corres. State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Secure_Phone__c</fullName>
        <description>This field is created to capture the Practitioner Correspondence Phone  as a part of OLTP Req-3356.</description>
        <label>Secure Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Secure_Street__c</fullName>
        <description>This field is created to capture the Practitioner Secure Street 1 as a part of OLTP Req-3356.</description>
        <label>Practitioner Secure Corres. Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Speciality_1__c</fullName>
        <description>This field is created to capture the Practitioner Speciality as a part of OLTP Req-3356.</description>
        <label>Primary Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Speciality_2__c</fullName>
        <description>This field is created to capture the Practitioner Speciality as a part of OLTP Req-3356.</description>
        <label>Secondary Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Practitioner_Speciality_3__c</fullName>
        <description>This field is created to capture the Practitioner Speciality as a part of OLTP Req-3356.</description>
        <label>Other Speciality</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Provider_type__c</fullName>
        <description>Req 3356 Field created to differentiate between Supplier and practitioner record</description>
        <label>SHP Provider Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SHP_Sales_Contact__c</fullName>
        <description>This field is used to identify Contact records that belong to SHP Sales Contact Record Types</description>
        <formula>OR( RecordType.DeveloperName = &quot;SHP_Sales_Broker_Contact&quot;,RecordType.DeveloperName = &quot;SHP_Sales_Broker_Contact_Read_Only&quot;,RecordType.DeveloperName = &quot;SHP_Sales_Employer_Contact&quot;,RecordType.DeveloperName = &quot;SHP_Sales_Employer_Contact_Read_Only&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SHP Sales Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SHP_Secure_Corres_Address__c</fullName>
        <description>For req 3356  OLTP provider</description>
        <formula>SHP_Practitioner_Secure_Street__c  + &apos; &apos;+ SHP_Practitioner_Secure_Corres_City__c  + &apos; &apos; +  SHP_Practitioner_Secure_Corres_State__c   + &apos; &apos;+  SHP_Practitioner_Corres_Secure_Zip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Secure Corres. Address</label>
        <type>Text</type>
    </fields>
</CustomObject>